--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-dropdown-picker": "^5.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
