--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "0.74.5",
-    "react-native-dropdown-picker": "^5.4.6"
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.1.3"
   },
   "private": true
